[metadata]
name = glance-check
author = SUSE Glance Team
summary = Tooling for glance operators to verify the health of diagnose their Glance service.
description-file = README.rst
license = Apache-2
classifier =
    Development Status :: 3 - Alpha
        Environment :: Console
        Environment :: OpenStack
        Intended Audience :: Developers
        Intended Audience :: Information Technology
        License :: OSI Approved :: Apache Software License
        Operating System :: OS Independent
        Programming Language :: Python
keywords =
    openstack
    glance
    check
[files]
packages =
    glance_check
[entry_points]
console_scripts =
    glance-check = glance_check.shell:main
